# rdclipper

./: .gitignore  pyproject.toml
src/rdclipper/: rddownload.py
